adult/logs/create_fluctuations_15091918_676.out
SLURM_JOBID:  15092597
SLURM_ARRAY_TASK_ID:  676
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 8, 0.0005, 160)


